# Tfg-Pistola-Agua

./: .gitignore  brazo1.stl  brazo2.stl  sujecionbarra.stl
cads/: agarredron.stl  deposito.stl
feetech_servo/: CMakeLists.txt
feetech_servo/examples/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
feetech_servo/examples/examples/: Makefile  cmake_install.cmake  test_servo
feetech_servo/include/feetech_servo/: Joystick.h  SCServo.h  WaterArm.h
feetech_servo/src/: SCServo.cpp  WaterArm.cpp  joystick.cpp
